# docs/swagger.yaml
@@ -13,6 +13,10 @@ definitions:
     properties:
       assignee:
         type: string
+      description:
+        type: string
+      status:
+        $ref: '#/definitions/domain.TaskStatus'
       title:
         type: string
     required:
